# PAF-MPI

./: CMakeLists.txt  README.md  RunBasicSelector.C
inc/: PAFMPIExecutionEnvironment.hpp  PAFMPIWorkerJob.hpp
src/: PAFMPIExecutionEnvironment.cpp  PAFMPIWorkerJob.cpp  main.cpp
