CMAKE_MINIMUM_REQUIRED(VERSION 3.2)
PROJECT(PAF-MPI)

LIST(APPEND CMAKE_PREFIX_PATH $ENV{ROOTSYS})

FIND_PACKAGE(ROOT REQUIRED)
FIND_PACKAGE(MPI REQUIRED)

INCLUDE(${ROOT_USE_FILE})

INCLUDE_DIRECTORIES($ENV{PAFPATH}/include/)

INCLUDE_DIRECTORIES(inc/)
INCLUDE_DIRECTORIES(${MPI_INCLUDE_PATH})
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/include)

SET(PAFMPI_SOURCES
    src/PAFMPIExecutionEnvironment.cpp
    src/PAFMPIWorkerJob.cpp
)

ROOT_GENERATE_DICTIONARY(G__PAFMPI inc/PAFMPIExecutionEnvironment.hpp)


ADD_LIBRARY(PAFMPI SHARED G__PAFMPI.cxx ${PAFMPI_SOURCES})
TARGET_LINK_LIBRARIES(PAFMPI ${ROOT_LIBRARIES} ${MPI_LIBRARIES} $ENV{PAFPATH}/lib/libPAF.so)

ADD_EXECUTABLE(PAFMPIRun ${PAFMPI_SOURCES} src/main.cpp)
TARGET_LINK_LIBRARIES(PAFMPIRun ${ROOT_LIBRARIES} ${MPI_LIBRARIES} $ENV{PAFPATH}/lib/libPAF.so)